# instructor-classify

./: .gitignore  404.html  codecov.yml  index.html  mkdocs.yml  mypy.ini  pyproject.toml  readme.md  refactoring_plan.md  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-docs.yml  publish.yml  run-tests.yml
api/: index.html
contributing/: index.html
docs/: api.md  contributing.md  index.md  installation.md
docs/usage/: evaluation.md  examples.md  getting-started.md  modular_evaluation.md  programmatic-definition.md
installation/: index.html
instructor_classify/: __init__.py  classify.py  cli.py  schema.py
instructor_classify/eval_harness/: base.py  orchestrator.py  unified_eval.py
instructor_classify/eval_harness/caching/: __init__.py  disk_cache.py
instructor_classify/eval_harness/config/: __init__.py  evaluation_config.py
instructor_classify/eval_harness/pipeline/: __init__.py  analysis_stage.py  config_stage.py  execution_stage.py  load_stage.py  model_stage.py  reporting_stage.py
instructor_classify/eval_harness/processing_strategies/: __init__.py  async_strategy.py  (+2 more)
instructor_classify/templates/: .gitignore  README.md  __init__.py  example.py  prompt.yaml
search/: search_index.json
tests/: test_classifier_async.py  test_classifier_messages.py  test_cli.py  test_eval.py  test_examples.py  test_modular_eval.py  test_schema.py  test_unified_eval.py  test_unified_eval_async.py
usage/evaluation/: index.html
usage/examples/: index.html
usage/getting-started/: index.html
usage/programmatic-definition/: index.html
(+5 files in other folders)
