[project]
name = "instructor_classify"
version = "0.1.0"
description = "A CLI tool for initializing and using classification projects"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "instructor>=0.3.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "numpy>=2.0.2",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
]

[project.scripts]
instruct-classify = "instructor_classify.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["instructor_classify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
